--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,15 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /* animation: App-logo-spin infinite 20s linear; */
+  width: 420px;
+  height: 120px;
 }
 
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
+  padding: 30px;
   color: white;
 }
 
